# oculy

./: .flake8  .gitignore  LICENSE  README.rst  lint_requirements.txt  pyproject.toml  setup.cfg  structure.md  test_requirements.txt
.github/workflows/: ci.yaml
oculy/: __init__.py  __main__.py  oculy_manifest.enaml
oculy/data/: converter.py  dataarray.py  dataset.py  datastore.py  manifest.enaml  plugin.py
oculy/io/: __init__.py  loader.py  loader_config.enaml  manifest.enaml  plugin.py
oculy/io/loaders/: __init__.py  csv_loader.py  loader.py
oculy/io/loaders/csv/: __init__.py  csv_config.enaml  csv_loader.py
oculy/io/loaders/hdf5/: __init__.py
oculy/plotting/: __init__.py  manifest.enaml  plot_widget.enaml  plugin.py  sync_manager.py
oculy/plotting/backends/: __init__.py  backend.py  resolver.py
oculy/plotting/backends/matplotlib/: __init__.py  axes.py  axis.py  figure.py  plot_1d.py  plot_2d.py
oculy/plotting/plots/: __init__.py  axes.py  base.py  figure.py  plot_1d.py  plot_2d.py  plot_widget.enaml
oculy/transformations/: __init__.py  manifest.enaml  masks.py  node.py  plugin.py
oculy/workspaces/: __init__.py
oculy/workspaces/simple/: __init__.py  content.enaml  file_selector.enaml  manifest.enaml  mask_parameters.py  mask_view.enaml  plot_1d_model.py  plot_1d_panel.enaml  plot_2d_model.py  plot_2d_panel.enaml  workspace.py
src/oculy/: __main__.py
src/oculy/data/: __init__.py  datastore.py  manifest.enaml
src/oculy/io/: loader.py  manifest.enaml  plugin.py
src/oculy/io/loaders/csv/: __init__.py  csv_config.enaml  csv_loader.py
src/oculy/io/loaders/labber/: __init__.py
src/oculy/plotting/: __init__.py  manifest.enaml  plot_widget.enaml  plugin.py  sync_manager.py
src/oculy/plotting/backends/: __init__.py  backend.py  resolver.py
src/oculy/plotting/backends/matplotlib/: __init__.py  axes.py  figure.py  plot_1d.py  plot_2d.py
src/oculy/plotting/plots/: __init__.py  axes.py  base.py  plot_1d.py  plot_2d.py
src/oculy/transformations/: __init__.py  manifest.enaml  masks.py  node.py  plugin.py
src/oculy/workspaces/simple/: __init__.py  content.enaml  file_selector.enaml  manifest.enaml  mask_parameters.py  mask_view.enaml  plot_1d_model.py  plot_1d_panel.enaml  plot_2d_model.py  plot_2d_panel.enaml  workspace.py
tests/: conftest.py  test__main__.py  test_loader.py  test_plugin.py
